<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.fuadhamidan.moviedb.feature.movie_detail.DetailViewModel"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.fuadhamidan.moviedb.feature.MainActivity"
        tools:showIn="@layout/fragment_movie_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_margin_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Release"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{viewmodel.mReleaseYear}"
                            android:textSize="@dimen/text_size_detil"
                            tools:text="2014"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_margin_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Duration"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{viewmodel.mRuntime}"
                            android:textSize="@dimen/text_size_detil"
                            tools:text="200m"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_margin_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Vote Average"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{viewmodel.mVoteAverage}"
                            android:textSize="@dimen/text_size_detil"
                            tools:text="8.2/10"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/label_synopsys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:text="@string/label_synopsys"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:text="@{viewmodel.mOverview}"
                android:textSize="@dimen/text_size_body1"/>

            <TextView
                android:id="@+id/label_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:text="@string/label_trailer"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:overScrollMode="never"
                    android:scrollbars="none"/>

                <TextView
                    android:id="@+id/message_no_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/message_there_is_no_trailer"
                    android:textSize="@dimen/text_size_secondary"
                    android:textStyle="italic"
                    android:visibility="@{viewmodel.mVisibilityMessageTrailer}"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/label_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/label_review"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:visibility="@{viewmodel.mVisibilityRecyclerReview}"/>

                <TextView
                    android:id="@+id/message_no_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/message_there_is_no_review"
                    android:textSize="@dimen/text_size_secondary"
                    android:textStyle="italic"
                    android:visibility="@{viewmodel.mVisibilityMessageReview}"/>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>